--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -311,15 +311,15 @@
       <div class="edge__flex  edge__flex--second">
         <div class="edge__box  edge__box--over">
           <b>No Fees On Deposits</b>
-          <p>We aim to help you make the most of your time & money so we'll reimburse any fees that are charged to your account when you make a deposit. We're also into providing instant withdrawals so that we don't keep you waiting.</p>
+          <p>Our plan is to help our clients make the most use of their time and money. So fees that are charged to your account when you make a deposit is returned back. You can also withdraw your funds swiftly without any hiccups. </p>
         </div>
         <div class="edge__box  edge__box--free">
           <b>Superfast Execution</b>
-          <p>FXTM provides some of the best execution records in the industry. At ForexTime your trades will be executed in milliseconds.</p>
+          <p>FXTM provide a speedy execution of all your transactions. There is no delay in any of our operation from start to finish.</p>
         </div>
         <div class="edge__box  edge__box--award">
           <b>Free Technical & Fundamental Analysis</b>
-          <p>We provide a high standard of technical and fundamental analysis, and some of the world's leading media seem to think so too as they quote us on a regular basis.</p>
+          <p>Here we ensure the high-quality standard of our technical and fundamental analysis is always maintained. And also, the feedback from the public on our services are remarkable.</p>
         </div>
       </div>
     </div>
