--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -315,7 +315,7 @@
         </div>
         <div class="edge__box  edge__box--free">
           <b>Superfast Execution</b>
-          <p>FXTM provide a speedy execution of all your transactions. There is no delay in any of our operation from start to finish.</p>
+          <p>FXTM provides a speedy execution of all your transactions. There is no delay in any of our operation from start to finish.</p>
         </div>
         <div class="edge__box  edge__box--award">
           <b>Free Technical & Fundamental Analysis</b>
