--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -329,16 +329,16 @@
       <h1>Start Trading</h1>
       <div class="start__flex">
         <div class="start__box  start__box--one">
-          <b>Form</b>
-          <p>Simply fill in the registration form</p>
+          <b>Sign Up / Sign In</b>
+          <p>Register and sign up today</p>
         </div>
         <div class="start__box">
-          <b>MyFXTM</b>
-          <p>You're taken to MyFXTM - your personal trading portal</p>
+          <b>My MultiplyMarket</b>
+          <p>Login to your personal trading portal</p>
         </div>
         <div class="start__box">
-          <b>Trade!</b>
-          <p>Submit your documents, fund your account & trade!</p>
+          <b>Trade and earn</b>
+          <p>Submit a means of identification, make a deposit into your account and trade</p>
         </div>
       </div>
     </div>
