change position app

--- a/forex-lp/index-it.html
+++ b/forex-lp/index-it.html
@@ -319,6 +319,9 @@
       <div class="app__top">
         <b>Forex24 globale sempre e ovunque</b>
         <p>Scambia i tuoi beni sottostanti preferiti anche mentre viaggi, utilizzando l'applicazione disponibile su App Store e Google Play. Rimani connesso e aggiornato e fai trading mentre sei in movimento.</p>
+      </div>
+      <div class="app__middle"></div>
+      <div class="app__bottom">
         <a href="#" title="App Store">
           <img src="img/apple.png" alt="App Store"><br>
         </a>
@@ -326,7 +329,6 @@
           <img src="img/google.png" alt="Google Play">
         </a>
       </div>
-      <div class="app__bottom"></div>
     </div>
   </section>
   <div class="promo">
