--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -316,6 +316,9 @@
       <div class="app__top">
         <b>Forex24 Global Anytime, Anywhere</b>
         <p>Trade your favourite underlying assets even while you are on the go using the app available at the App Store and Google Play. Stay connected and up to date and trade while on the go.</p>
+      </div>
+      <div class="app__middle"></div>
+      <div class="app__bottom">
         <a href="#" title="App Store">
           <img src="img/apple.png" alt="App Store"><br>
         </a>
@@ -323,7 +326,6 @@
           <img src="img/google.png" alt="Google Play">
         </a>
       </div>
-      <div class="app__bottom"></div>
     </div>
   </section>
   <div class="promo">
