--- a/mm/index.html
+++ b/mm/index.html
@@ -10,12 +10,11 @@
 <body>
   <section class="video">
     <video src="img/stats.mov" autoplay muted loop></video>
+  </section>
     <header class="header">
       <div class="container">
         <nav class="main-nav">
-          <a href="#">
-            <img src="" alt="">
-          </a>
+          <img src="img/logo-w.png" alt="MultiplyMarket">
           <div class="main-nav__user">
             <a class="button" href="#">Open live account</a>
             <a class="button" href="#">Log In</a>
@@ -36,6 +35,6 @@
       <p>Innovative power tools<br>That align with your goals</p>
       <a class="button" href="#">Open live account</a>
     </div>
-  </section>
+  
 </body>
 </html>
