--- a/mm/index.html
+++ b/mm/index.html
@@ -11,30 +11,31 @@
   <section class="video">
     <video src="img/stats.mov" autoplay muted loop></video>
   </section>
-    <header class="header">
-      <div class="container">
-        <nav class="main-nav">
-          <img src="img/logo-w.png" alt="MultiplyMarket">
-          <div class="main-nav__user">
-            <a class="button" href="#">Open live account</a>
-            <a class="button" href="#">Log In</a>
-            <a href="#"></a>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <div class="sub-nav">
-      <div class="sub-nav__flex">
-        <a href="#">Accounts</a>
-        <a href="#">Platforms</a>
-        <a href="#">Tools</a>
-      </div>
+  <header class="header">
+    <div class="container">
+      <nav class="main-nav">
+        <img src="img/logo-w.png" alt="MultiplyMarket">
+        <div class="main-nav__user">
+          <a class="button" href="#">Open live account</a>
+          <a class="button  button--black" href="#">Log In</a>
+          <a href="#"></a>
+        </div>
+      </nav>
     </div>
+  </header>
+  <div class="sub-nav">
+    <div class="sub-nav__flex">
+      <a href="#">Accounts</a>
+      <a href="#">Platforms</a>
+      <a href="#">Tools</a>
+    </div>
+  </div>
+  <div class="video__title">
     <div class="container">
       <h1>MultiplyMarket</h1>
       <p>Innovative power tools<br>That align with your goals</p>
-      <a class="button" href="#">Open live account</a>
+      <a class="button  button--title" href="#">Open live account</a>
     </div>
-  
+  </div>
 </body>
 </html>
