finish first block

--- a/mm/index.html
+++ b/mm/index.html
@@ -37,5 +37,6 @@
       <a class="button  button--title" href="#">Open live account</a>
     </div>
   </div>
+  <iframe class="video__frame" src="https://d1ynx0m2vyh32o.cloudfront.net/prod/widgets/src/index.html?cat=currencies&theme=lp&quote_only=true" frameborder="0"></iframe>
 </body>
 </html>
