change all structure

--- a/mm/index.html
+++ b/mm/index.html
@@ -10,33 +10,33 @@
 <body>
   <section class="video">
     <video src="img/stats.mov" autoplay muted loop></video>
-  </section>
-  <header class="header">
     <div class="container">
-      <nav class="main-nav">
-        <img src="img/logo-w.png" alt="MultiplyMarket">
-        <div class="main-nav__user">
-          <a class="button" href="#">Open live account</a>
-          <a class="button  button--black" href="#">Log In</a>
-          <a href="#"></a>
+      <div class="video__content">
+        <header class="header">
+          <nav class="main-nav">
+            <img src="img/logo-w.png" alt="MultiplyMarket">
+            <div class="main-nav__user">
+              <a class="button" href="#">Open live account</a>
+              <a class="button  button--black" href="#">Log In</a>
+            </div>
+          </nav>
+        </header>
+        <div class="sub-nav">
+          <a href="#">Accounts</a>
+          <a href="#">Platforms</a>
+          <a href="#">Tools</a>
         </div>
-      </nav>
+        <div class="video__title">
+          <h1>MultiplyMarket</h1>
+          <p>Innovative power tools<br>That align with your goals</p>
+          <a href="#" class="button  button--title">Open live account</a>
+        </div>
+        <iframe src="https://d1ynx0m2vyh32o.cloudfront.net/prod/widgets/src/index.html?cat=currencies&theme=lp&quote_only=true" frameborder="0"></iframe>
+      </div>
     </div>
-  </header>
-  <div class="sub-nav">
-    <div class="sub-nav__flex">
-      <a href="#">Accounts</a>
-      <a href="#">Platforms</a>
-      <a href="#">Tools</a>
-    </div>
+  </section>
+  <div>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam placeat, a obcaecati officia delectus ipsum nemo alias impedit ipsa, ullam iusto voluptates modi, quos eveniet adipisci officiis hic optio veritatis.
   </div>
-  <div class="video__title">
-    <div class="container">
-      <h1>MultiplyMarket</h1>
-      <p>Innovative power tools<br>That align with your goals</p>
-      <a class="button  button--title" href="#">Open live account</a>
-    </div>
-  </div>
-  <iframe class="video__frame" src="https://d1ynx0m2vyh32o.cloudfront.net/prod/widgets/src/index.html?cat=currencies&theme=lp&quote_only=true" frameborder="0"></iframe>
 </body>
 </html>
