change position app

--- a/forex-lp/index.html
+++ b/forex-lp/index.html
@@ -320,7 +320,7 @@
       <div class="app__middle"></div>
       <div class="app__bottom">
         <a href="#" title="App Store">
-          <img src="img/apple.png" alt="App Store"><br>
+          <img src="img/apple.png" alt="App Store">
         </a>
         <a href="#" title="Google Play">
           <img src="img/google.png" alt="Google Play">
