--- a/forex/index.html
+++ b/forex/index.html
@@ -154,6 +154,14 @@
         <div class="trading__img"></div>
         <p>MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use.<br><br>It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
       </div>
+      <div class="trading__app">
+        <a href="#" title="App Store">
+          <img src="img/apple.png" alt="App Store">
+        </a>
+        <a href="#" title="Google Play">
+          <img src="img/google.png" alt="Google Play">
+        </a>
+      </div>
     </div>
   </section>
   <section class="sign">
