--- a/mm/index.html
+++ b/mm/index.html
@@ -64,5 +64,20 @@
       </div>
     </div>
   </section>
+  <section class="trade">
+    <div class="container">
+      <div class="trade__flex">
+        <div class="trade__left">
+          <h1>Trade now</h1>
+          <p>Trade Shares, Indices, Forex, Commodities and Cryptocurrencies with CFDs</p>
+          <a class="button  button--green" href="#">Sign up for free</a>
+          <small>TradingCFDs involves risk of loss</small>
+        </div>
+        <div class="trade__right">
+          <video src="img/tel.mp4" autoplay muted loop></video>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
