--- a/mm/index.html
+++ b/mm/index.html
@@ -75,8 +75,44 @@
         </div>
         <div class="trade__right">
           <video src="img/tel.mp4" autoplay muted loop></video>
+          <div class="trade__link">
+            <a href="#" title="App Store">
+              <img src="img/trade-a.png" alt="App Store">
+            </a>
+            <a href="#" title="Google Play">
+              <img src="img/trade-g.png" alt="Google Play">
+            </a>
+          </div>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="edge">
+    <div class="container">
+      <div class="edge__flex">
+        <div class="edge__box">
+          <b>2014</b>
+          <p>Intrnational Finantial<br>membership nominee</p>
+        </div>
+        <div class="edge__box">
+          <b>2014</b>
+          <p>Intrnational Finantial<br>membership nominee</p>
+        </div>
+        <div class="edge__box">
+          <b>2014</b>
+          <p>Intrnational Finantial<br>membership nominee</p>
+        </div>
+        <div class="edge__box">
+          <b>2014</b>
+          <p>Intrnational Finantial<br>membership nominee</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="live">
+    <div class="container">
+      <h1>Multyplymarket Live Prices Feed</h1>
+      <iframe src="https://prices.bdswiss.com/" frameborder="0"></iframe>
     </div>
   </section>
 </body>
