--- a/mm/index.html
+++ b/mm/index.html
@@ -109,11 +109,11 @@
       </div>
     </div>
   </section>
-  <section class="live">
+  <!-- <section class="live">
     <div class="container">
       <h1>Multyplymarket Live Prices Feed</h1>
       <iframe src="https://prices.bdswiss.com/" frameborder="0"></iframe>
     </div>
-  </section>
+  </section> -->
 </body>
 </html>
