--- a/mm/index.html
+++ b/mm/index.html
@@ -14,7 +14,7 @@
       <div class="video__content">
         <header class="header">
           <nav class="main-nav">
-            <img src="img/logo-w.png" alt="MultiplyMarket">
+            <img src="img/logo-w.svg" height="60" alt="MultiplyMarket">
             <div class="main-nav__user">
               <a class="button" href="#">Open live account</a>
               <a class="button  button--black" href="#">Log In</a>
