--- a/mm/index.html
+++ b/mm/index.html
@@ -42,26 +42,26 @@
           <b>Multyplatform Trading</b>
           <p>Your goals are unique, so your investment guidance should be too. This is why at MultiplyMarket We take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also experienced ones, as the technology is well advanced and easy to use.</p>
         </div>
-        <img src="img/trading-right.jpg" alt="">
+        <img class="trading__img" src="img/trading-right.jpg" alt="">
       </div>
       <div class="trading__flex  trading__flex--second">
         <div class="trading__box  trading__box--tools">
-          <img src="img/trading-1.svg" width="200" alt="Intuitive tools">
+          <img src="img/trading-1.svg" alt="Intuitive tools">
           <b>Intuitive tools and<br>competitive pricing</b>
           <p>Whether you’re an active trader or long-term investor our web, mobile, and downloadable platforms give you everything you need to research stocks, place trades, and manage your portfolio with live-streaming access, real-time quotes and specialists with years of floor trading experience. As an STP (Straight Through Processing) broker, we do not have any conflict of interest regarding our clients’ trades, as we only receive a commission on the volume of the trades and do not benefit in any additional way by any client losses.</p>
         </div>
         <div class="trading__box  trading__box--trans">
-          <img src="img/trading-2.svg" width="200" alt="Transparent and Trustworthy">
+          <img src="img/trading-2.svg" alt="Transparent and Trustworthy">
           <b>Transparent AND<br>Trustworthy</b>
           <p>For some few years now, MultiplyMarket has been proud to help our customers pursue their financial goals while giving them more time to focus on what really matters in life. Everything we offer, from guidance to powerful trading tools, to retirement resources is built around one thing, you. We know it’s important to get professional guidance you can trust. That’s why our experienced, licensed reps are available by phone, email, online, and in-person for one-on-one support when you need it most. You can always count on us.</p>
         </div>
         <div class="trading__box  trading__box--funds">
-          <img src="img/trading-3.svg" width="200" alt="Secured funds">
+          <img src="img/trading-3.svg" alt="Secured funds">
           <b>Secured<br>funds</b>
           <p>Your funds are kept in segregated accounts and we use advanced encryption tools to keep all of your transactions and personal data safe and secured. Also our flat-rate commission on all online equity trades gives you access to our award-winning investing and trading experience. Plus, we keep our pricing simple with no share limits or hidden fees, no trade requirements to access advanced features, and no opening deposit minimums. At MultiplyMarket all transactions are simple and direct. You have nothing to fear as regards your funds or investments.</p>
         </div>
         <div class="trading__box  trading__box--algo">
-          <img src="img/trading-4.svg" width="" alt="Algo trading">
+          <img src="img/trading-4.svg" alt="Algo trading">
           <b>Algo<br>Trading</b>
           <p>Algo Trading is that program which gives every the opportunity to trade with better precision and high success rate than he/she would normally get. It makes use of a scenario-based approach and artificial intelligence so as to develop the best trading approach for the circumstances. Different variables such as price, quantity and time period are taken into serious consideration as well. The number of traders that make use of this Algo trading keeps increasing by the day, as it makes the trading journey easy and well profiting. Start Trading today and boost your trading experience.</p>
         </div>
