--- a/mm/index.html
+++ b/mm/index.html
@@ -11,7 +11,7 @@
   <section class="video">
     <video src="img/stats.mov" autoplay muted loop></video>
     <div class="container">
-      <div class="video__content">
+      <div class="video__header">
         <header class="header">
           <nav class="main-nav">
             <img src="img/logo-w.svg" height="50" alt="MultiplyMarket">
@@ -26,7 +26,7 @@
           <a href="#">Platforms</a>
           <a href="#">Tools</a>
         </div>
-        <div class="video__title">
+        <div class="title">
           <h1>MultiplyMarket</h1>
           <p>Innovative power tools<br>That align with your goals</p>
           <a href="#" class="button  button--title">Open live account</a>
@@ -42,7 +42,7 @@
           <b>Multyplatform Trading</b>
           <p>Your goals are unique, so your investment guidance should be too. This is why at MultiplyMarket We take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also experienced ones, as the technology is well advanced and easy to use.</p>
         </div>
-        <img class="trading__img" src="img/trading-right.jpg" alt="">
+        <img class="trading__img" src="img/trading-right.jpg">
       </div>
       <div class="trading__flex  trading__flex--second">
         <div class="trading__box  trading__box--tools">
