--- a/mm/index.html
+++ b/mm/index.html
@@ -21,10 +21,22 @@
             </div>
           </nav>
         </header>
-        <div class="sub-nav">
-          <a href="#">Accounts</a>
-          <a href="#">Platforms</a>
-          <a href="#">Tools</a>
+        <div class="sub-menu">
+          <ul class="sub-nav">
+              <li>
+                <a class="sub-link" href="#">Accounts</a>
+                <ul class="sub-nav__accounts">
+                    <li><a href="#">Trade with<br>MultiplyMarket</a></li>
+                    <li><a href="#">Account types</a></li>
+                    <li><a href="#">Segregated account</a></li>
+                    <li><a href="#">Open live account</a></li>
+                </ul>
+              </li>
+              <li>
+                <a class="sub-link" href="#">Platforms</a>
+              </li>
+              <li><a class="sub-link" href="#">Tools</a></li>
+          </ul>
         </div>
         <div class="title">
           <h1>MultiplyMarket</h1>
