--- a/mm/index.html
+++ b/mm/index.html
@@ -21,23 +21,21 @@
             </div>
           </nav>
         </header>
-        <div class="sub-menu">
-          <ul class="sub-nav">
-              <li>
-                <a class="sub-link" href="#">Accounts</a>
-                <ul class="sub-nav__accounts">
-                    <li><a href="#">Trade with<br>MultiplyMarket</a></li>
-                    <li><a href="#">Account types</a></li>
-                    <li><a href="#">Segregated account</a></li>
-                    <li><a href="#">Open live account</a></li>
-                </ul>
-              </li>
-              <li>
-                <a class="sub-link" href="#">Platforms</a>
-              </li>
-              <li><a class="sub-link" href="#">Tools</a></li>
-          </ul>
-        </div>
+        <ul class="sub-nav">
+            <li>
+              <a class="sub-link" href="templates/about-us.html">Accounts</a>
+              <ul class="sub-nav__accounts">
+                  <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
+                  <li><a href="templates/account-types.html">Account types</a></li>
+                  <li><a href="#">Segregated account</a></li>
+                  <li><a href="#">Open live account</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="sub-link" href="#">Platforms</a>
+            </li>
+            <li><a class="sub-link" href="#">Tools</a></li>
+        </ul>
         <div class="title">
           <h1>MultiplyMarket</h1>
           <p>Innovative power tools<br>That align with your goals</p>
