--- a/mm/index.html
+++ b/mm/index.html
@@ -32,7 +32,12 @@
               </ul>
             </li>
             <li>
-              <a class="sub-link" href="#">Platforms</a>
+              <a class="sub-link" href="templates/platform.html">Platforms</a>
+              <ul class="sub-nav__accounts">
+                  <li><a href="templates/platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
+                  <li><a href="#">MultiplyMarket Web Trader</a></li>
+                  <li><a href="#">MultiplyMarket Trade Mobile</a></li>
+              </ul>
             </li>
             <li><a class="sub-link" href="#">Tools</a></li>
         </ul>
