--- a/mm/index.html
+++ b/mm/index.html
@@ -16,7 +16,7 @@
           <nav class="main-nav">
             <img src="img/logo-w.svg" height="50" alt="MultiplyMarket">
             <div class="main-nav__user">
-              <a class="button" href="#">Open live account</a>
+              <a class="button" href="templates/register.html">Open live account</a>
               <a class="button  button--black" href="#">Log In</a>
             </div>
           </nav>
@@ -27,8 +27,8 @@
               <ul class="sub-nav__accounts">
                   <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
                   <li><a href="templates/account-types.html">Account types</a></li>
-                  <li><a href="#">Segregated account</a></li>
-                  <li><a href="#">Open live account</a></li>
+                  <li><a href="templates/separated.html">Segregated account</a></li>
+                  <li><a href="templates/register.html">Open live account</a></li>
               </ul>
             </li>
             <li>
@@ -44,7 +44,7 @@
         <div class="title">
           <h1>MultiplyMarket</h1>
           <p>Innovative power tools<br>That align with your goals</p>
-          <a href="#" class="button  button--title">Open live account</a>
+          <a class="button  button--title" href="templates/register.html">Open live account</a>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
         <div class="trade__left">
           <h1>Trade now</h1>
           <p>Trade Shares, Indices, Forex, Commodities and Cryptocurrencies with CFDs</p>
-          <a class="button  button--green" href="#">Sign up for free</a>
+          <a class="button  button--green" href="templates/register.html">Sign up for free</a>
           <small>TradingCFDs involves risk of loss</small>
         </div>
         <div class="trade__right">
