--- a/mm/index.html
+++ b/mm/index.html
@@ -78,7 +78,7 @@
         <div class="trading__box  trading__box--algo">
           <img src="img/trading-4.svg" alt="Algo trading">
           <b>Algo<br>Trading</b>
-          <p>Algo Trading is that program which gives every the opportunity to trade with better precision and high success rate than he/she would normally get. It makes use of a scenario-based approach and artificial intelligence so as to develop the best trading approach for the circumstances. Different variables such as price, quantity and time period are taken into serious consideration as well. The number of traders that make use of this Algo trading keeps increasing by the day, as it makes the trading journey easy and well profiting. Start Trading today and boost your trading experience.</p>
+          <p>Algo Trading is that program which gives every the opportunity to trade with better precision and high success rate than he/she would normally get. It makes use of a scenario-based approach and artificial intelligence so as to develop the best trading approach for the circumstances. Different variables such as price, quantity and time period are taken into serious consideration as well. The number of traders that make use of this Algo trading keeps increasing by the day, as it makes the trading journey easy and well profiting.</p>
         </div>
       </div>
     </div>
