--- a/mm/index.html
+++ b/mm/index.html
@@ -36,7 +36,7 @@
               <ul class="sub-nav__accounts">
                   <li><a href="templates/platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
                   <li><a href="#">MultiplyMarket Web Trader</a></li>
-                  <li><a href="#">MultiplyMarket Trade Mobile</a></li>
+                  <li><a href="templates/mobile.html">MultiplyMarket Trade Mobile</a></li>
               </ul>
             </li>
             <li><a class="sub-link" href="#">Tools</a></li>
