--- a/mm/index.html
+++ b/mm/index.html
@@ -35,7 +35,7 @@
               <a class="sub-link" href="templates/platform.html">Platforms</a>
               <ul class="sub-nav__accounts">
                   <li><a href="templates/platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
-                  <li><a href="#">MultiplyMarket Web Trader</a></li>
+                  <li><a href="templates/web.html">MultiplyMarket Web Trader</a></li>
                   <li><a href="templates/mobile.html">MultiplyMarket Trade Mobile</a></li>
               </ul>
             </li>
