--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -309,15 +309,15 @@
         </div>
       </div>
       <div class="edge__flex  edge__flex--second">
-        <div class="edge__box  edge__box--over">
+        <div class="edge__box  edge__box--overs">
           <b>No Fees On Deposits</b>
           <p>Our plan is to help our clients make the most use of their time and money. So fees that are charged to your account when you make a deposit is returned back. You can also withdraw your funds swiftly without any hiccups. </p>
         </div>
-        <div class="edge__box  edge__box--free">
+        <div class="edge__box  edge__box--frees">
           <b>Superfast Execution</b>
           <p>FXTM provides a speedy execution of all your transactions. There is no delay in any of our operation from start to finish.</p>
         </div>
-        <div class="edge__box  edge__box--award">
+        <div class="edge__box  edge__box--awards">
           <b>Free Technical & Fundamental Analysis</b>
           <p>Here we ensure the high-quality standard of our technical and fundamental analysis is always maintained. And also, the feedback from the public on our services are remarkable.</p>
         </div>
