--- a/mm/index.html
+++ b/mm/index.html
@@ -45,7 +45,7 @@
                   <li><a href="templates/spread.html">Spreads and trading hours</a></li>
                   <li><a href="templates/web.html">Trade glossary</a></li>
                   <li><a href="templates/mobile.html">Forex Signals</a></li>
-                  <li><a href="templates/mobile.html">Account faq</a></li>
+                  <li><a href="templates/faq.html">Account faq</a></li>
                   <li><a href="templates/mobile.html">Account funding & Withdrawal</a></li>
               </ul>
             </li>
