заебала эта работа

--- a/mm/index.html
+++ b/mm/index.html
@@ -43,7 +43,7 @@
               <a class="sub-link" href="templates/spread.html">Tools</a>
               <ul class="sub-nav__accounts">
                   <li><a href="templates/spread.html">Spreads and trading hours</a></li>
-                  <li><a href="templates/web.html">Trade glossary</a></li>
+                  <li><a href="templates/glossary.html">Trade glossary</a></li>
                   <li><a href="templates/mobile.html">Forex Signals</a></li>
                   <li><a href="templates/account-faq.html">Account faq</a></li>
                   <li><a href="templates/account-funding.html">Account funding & Withdrawal</a></li>
