--- a/mm/index.html
+++ b/mm/index.html
@@ -44,7 +44,7 @@
               <ul class="sub-nav__accounts">
                   <li><a href="templates/spread.html">Spreads and trading hours</a></li>
                   <li><a href="templates/glossary.html">Trade glossary</a></li>
-                  <li><a href="templates/mobile.html">Forex Signals</a></li>
+                  <li><a href="templates/signals.html">Forex Signals</a></li>
                   <li><a href="templates/account-faq.html">Account faq</a></li>
                   <li><a href="templates/account-funding.html">Account funding & Withdrawal</a></li>
               </ul>
