--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -332,11 +332,11 @@
           <b>Sign Up / Sign In</b>
           <p>Register and sign up today</p>
         </div>
-        <div class="start__box">
+        <div class="start__box  start__box--two">
           <b>My MultiplyMarket</b>
           <p>Login to your personal trading portal</p>
         </div>
-        <div class="start__box">
+        <div class="start__box  start__box--three">
           <b>Trade and earn</b>
           <p>Submit a means of identification, make a deposit into your account and trade</p>
         </div>
