--- a/mm/index.html
+++ b/mm/index.html
@@ -27,7 +27,7 @@
               <ul class="sub-nav__accounts">
                   <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
                   <li><a href="templates/account-types.html">Account types</a></li>
-                  <li><a href="templates/separated.html">Segregated account</a></li>
+                  <li><a href="templates/segregated.html">Segregated account</a></li>
                   <li><a href="templates/register.html">Open live account</a></li>
               </ul>
             </li>
