--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -326,7 +326,7 @@
   </section>
   <section class="start">
     <div class="container">
-      <h1>Start Trading</h1>
+      <h1>3 Easy Steps To Start Trading</h1>
       <div class="start__flex">
         <div class="start__box  start__box--one">
           <b>Sign Up / Sign In</b>
