add block steps

--- a/mm/index.html
+++ b/mm/index.html
@@ -137,12 +137,36 @@
       </div>
     </div>
   </section>
-  <!-- <section class="live">
+  <section class="start">
     <div class="container">
-      <h1>Multyplymarket Live Prices Feed</h1>
-      <iframe src="https://prices.bdswiss.com/" frameborder="0"></iframe>
+      <h1>A Client-Centric Approach</h1>
+      <p>Founded in 2006 as an online forex broker, FxPro has always followed a client-centric approach, placing our clients’ needs at the forefront of all our operations. Our commitment to providing investors with a wide range of options when trading the world’s markets helped influence the company’s growth from an online broker specialising in forex, into one providing CFDs on 6 asset classes, with over 280 instruments available to trade.</p>
+      <p>At FxPro, we are dedicated to providing our clients with the latest in trading technology and forex tools through continuous investments in innovation. In addition to new instruments, we regularly update our offering with new platforms and services to meet the varying needs of traders, while honouring our commitment to transparency and fair trading practices.</p>
+      <p>We also offer comprehensive educational material, to help traders learn about online forex trading and the financial markets. Our award-winning customer support team is on hand, 24/5, to assist with any issues you may encounter or questions you may have.</p>
+      <p>The importance we place on customer satisfaction, and our dedication to being more than ‘just another forex broker’, has led to us receiving over 50 UK and international awards for the quality of our services. This includes the ‘Best Forex Provider’ award at the prestigious Investors Chronicle and Financial Times Investment and Wealth Management Awards, which we have received four years in a row (2013-2017).</p>
+      <h2>Start Trading with FxPro in 4 Steps</h2>
+      <p class="start__sub">FxPro was voted ‘Best Forex Broker’ 2014, 2015, and 2016 at the Forex Awards. See how you can start trading with us.</p>
+      <div class="start__flex">
+        <div class="start__box">
+          <b>1. Register</b>
+          <p>Open your Live Trading Account via FxPro Direct</p>
+        </div>
+        <div class="start__box">
+          <b>2. Verify</b>
+          <p>Upload your documents to verify your account</p>
+        </div>
+        <div class="start__box">
+          <b>3. Fund</b>
+          <p>Login to FxPro Direct and deposit funds into your account</p>
+        </div>
+        <div class="start__box">
+          <b>4. Trade</b>
+          <p>Start trading, and choose from 250+ instruments</p>
+        </div>
+      </div>
+      <a class="button  button--green" href="#">Get Started</a>
     </div>
-  </section> -->
+  </section>
   <section class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2699.6868167484!2d8.556589215686767!3d47.418049579172596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aa076592d101f%3A0x809f9fcfc228ddc4!2zTGV1dHNjaGVuYmFjaHN0cmFzc2UgOTUsIDgwNTAgWsO8cmljaCwg0KjQstC10LnRhtCw0YDQuNGP!5e0!3m2!1sru!2sua!4v1517848738320" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
   </section>
