--- a/mm/index.html
+++ b/mm/index.html
@@ -170,5 +170,49 @@
   <section class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2699.6868167484!2d8.556589215686767!3d47.418049579172596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aa076592d101f%3A0x809f9fcfc228ddc4!2zTGV1dHNjaGVuYmFjaHN0cmFzc2UgOTUsIDgwNTAgWsO8cmljaCwg0KjQstC10LnRhtCw0YDQuNGP!5e0!3m2!1sru!2sua!4v1517848738320" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__flex">
+        <ul>
+          <b>Account</b>
+          <li><a href="#">Log In</a></li>
+          <li><a href="#">Sign Up</a></li>
+        </ul>
+        <ul>
+          <b>About Us</b>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Security</a></li>
+        </ul>
+        <ul>
+          <b>Assets</b>
+          <li><a href="#">Forex</a></li>
+          <li><a href="#">Futures</a></li>
+          <li><a href="#">Commodities</a></li>
+          <li><a href="#">Indices</a></li>
+          <li><a href="#">Stocks</a></li>
+          <li><a href="#">Algo trading</a></li>
+        </ul>
+        <ul>
+          <b>Resources</b>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Terms and Conditions</a></li>
+          <li><a href="#">Risk Disclosure</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Anti-Money Laundering</a></li>
+          <li><a href="#">KYC Policy</a></li>
+        </ul>
+      </div>
+      <h1>Risk Warning:</h1>
+      <p>Trading in Forex and CFDs can carry a high level of risk and can result in the loss of part or all of your investment, so it may not be appropriate for all investors. You should be aware of all the risks associated with Forex and CFD trading and seek for independent advice. Past performance does not constitute a reliable indicator of future results. Forecasts for the future do not constitute a reliable indicator of future performance. Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017.VACENTY FINANCE LIMITED All Rights Reserved, Registered in Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960 (henceforth: “MultiplyMarket”) unless otherwise indicated.</p>
+      <hr>
+      <div class="footer__flex">
+        <p>© 2017 ALL right reserved MultiplyMarket</p>
+        <img src="" alt="">
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
