--- a/mm/index.html
+++ b/mm/index.html
@@ -14,7 +14,7 @@
       <div class="video__header">
         <header class="header">
           <nav class="main-nav">
-            <img src="img/logo-w.svg" height="50" alt="MultiplyMarket">
+            <img src="img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
             <div class="main-nav__user">
               <a class="button" href="templates/register.html">Open live account</a>
               <a class="button  button--black" href="#">Log In</a>
@@ -24,8 +24,8 @@
         </header>
         <ul class="sub-nav">
             <li>
-              <a class="sub-link" href="templates/about-us.html">Accounts</a>
-              <ul class="sub-nav__accounts">
+              <a class="sub__title">Accounts</a>
+              <ul class="sub-nav__list">
                   <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
                   <li><a href="templates/account-types.html">Account types</a></li>
                   <li><a href="templates/segregated.html">Segregated account</a></li>
@@ -33,16 +33,16 @@
               </ul>
             </li>
             <li>
-              <a class="sub-link" href="templates/platform.html">Platforms</a>
-              <ul class="sub-nav__accounts">
+              <a class="sub__title">Platforms</a>
+              <ul class="sub-nav__list">
                   <li><a href="templates/platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
                   <li><a href="templates/web.html">MultiplyMarket Web Trader</a></li>
                   <li><a href="templates/mobile.html">MultiplyMarket Trade Mobile</a></li>
               </ul>
             </li>
             <li>
-              <a class="sub-link" href="templates/spread.html">Tools</a>
-              <ul class="sub-nav__accounts">
+              <a class="sub__title">Tools</a>
+              <ul class="sub-nav__list">
                   <li><a href="templates/spread.html">Spreads and trading hours</a></li>
                   <li><a href="templates/glossary.html">Trade glossary</a></li>
                   <li><a href="templates/signals.html">Forex Signals</a></li>
