--- a/mm/index.html
+++ b/mm/index.html
@@ -51,7 +51,7 @@
               </ul>
             </li>
         </ul>
-        <div class="title">
+        <div class="title  title--down">
           <h1>MultiplyMarket</h1>
           <p>Innovative power tools<br>That align with your goals</p>
           <a class="button  button--title" href="templates/register.html">Open live account</a>
