--- a/mm/index.html
+++ b/mm/index.html
@@ -148,19 +148,19 @@
       <h2>Start Trading with FxPro in 4 Steps</h2>
       <p class="start__sub">FxPro was voted ‘Best Forex Broker’ 2014, 2015, and 2016 at the Forex Awards. See how you can start trading with us.</p>
       <div class="start__flex">
-        <div class="start__box">
+        <div class="start__box  start__box--register">
           <b>1. Register</b>
           <p>Open your Live Trading Account via FxPro Direct</p>
         </div>
-        <div class="start__box">
+        <div class="start__box  start__box--verify">
           <b>2. Verify</b>
           <p>Upload your documents to verify your account</p>
         </div>
-        <div class="start__box">
+        <div class="start__box  start__box--fund">
           <b>3. Fund</b>
           <p>Login to FxPro Direct and deposit funds into your account</p>
         </div>
-        <div class="start__box">
+        <div class="start__box  start__box--trade">
           <b>4. Trade</b>
           <p>Start trading, and choose from 250+ instruments</p>
         </div>
