--- a/mm/index.html
+++ b/mm/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section class="video">
-    <video src="img/stats.mov" autoplay muted loop></video>
+    <video src="img/stats.mov" poster="img/edge.png" autoplay muted loop></video>
     <div class="container">
       <div class="video__header">
         <header class="header">
