--- a/mm/index.html
+++ b/mm/index.html
@@ -177,20 +177,20 @@
         <ul>
           <b>Account</b>
           <li><a href="#">Log In</a></li>
-          <li><a href="#">Sign Up</a></li>
+          <li><a href="templates/register.html">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="templates/about.html">About Us</a></li>
+          <li><a href="templates/careers.html">Careers</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Security</a></li>
+          <li><a href="templates/security.html">Security</a></li>
         </ul>
         <ul>
           <b>Assets</b>
-          <li><a href="#">Forex</a></li>
-          <li><a href="#">Futures</a></li>
+          <li><a href="templates/forex.html">Forex</a></li>
+          <li><a href="templates/futures.html">Futures</a></li>
           <li><a href="#">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
