--- a/mm/index.html
+++ b/mm/index.html
@@ -191,7 +191,7 @@
           <b>Assets</b>
           <li><a href="templates/forex.html">Forex</a></li>
           <li><a href="templates/futures.html">Futures</a></li>
-          <li><a href="#">Commodities</a></li>
+          <li><a href="templates/commodities.html">Commodities</a></li>
           <li><a href="#">Indices</a></li>
           <li><a href="#">Stocks</a></li>
           <li><a href="#">Algo trading</a></li>
